Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25487

QNetworkAccessManager never deletes the httpThread

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • Network
    • None
    • 534bcc96676ac02fc327f9e43d3785c7424b0750

    Description

      The httpThread is set to delete like this :

      QObject::connect(thread, SIGNAL(finished()), thread, SLOT(deleteLater()));

      Then in the destructor of QNetworkAccessManagerPrivate quit is called on the thread.

      This will make the thread emit finished, but we never return to the eventloop so the deletion is never done.

      The attached application can be used to reproduce.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            xcm Martin Petersson (Inactive)
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes