src/network/access/qnetworkaccessmanager.cpp
@@ -1280,9 +1280,12 @@ void QNetworkAccessManagerPrivate::clearCache(QNetworkAccessManager *manager)
     manager->d_func()->authenticationManager->clearCache();
 
     if (manager->d_func()->httpThread) {
-        // The thread will deleteLater() itself from its finished() signal
         manager->d_func()->httpThread->quit();
         manager->d_func()->httpThread->wait(5000);
+        if (manager->d_func()->httpThread->isFinished())
+            delete manager->d_func()->httpThread;
+        else
+            QObject::connect(manager->d_func()->httpThread, SIGNAL(finished()), manager->d_func()->httpThread, SLOT(deleteLater()));
         manager->d_func()->httpThread = 0;
     }
 }
@@ -1290,9 +1293,12 @@ void QNetworkAccessManagerPrivate::clearCache(QNetworkAccessManager *manager)
 QNetworkAccessManagerPrivate::~QNetworkAccessManagerPrivate()
 {
     if (httpThread) {
-        // The thread will deleteLater() itself from its finished() signal
         httpThread->quit();
         httpThread->wait(5000);
+        if (httpThread->isFinished())
+            delete httpThread;
+        else
+            QObject::connect(httpThread, SIGNAL(finished()), httpThread, SLOT(deleteLater()));
         httpThread = 0;
     }
 }
